force-app/main/default/objects/SERVICE_CORE__x/SERVICE_CORE__x.object-meta.xml
<CustomObject>
    <description>SERVICE_CORE</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>SERVICE_CORE</externalName>
    <label>サービスコア</label>
</CustomObject>