force-app/main/default/objects/SERVICE_CORE__x/fields/contract_inf_id__c.field-meta.xml
<CustomField>
    <fullName>contract_inf_id__c</fullName>
    <description>contract_inf_id</description>
    <externalDeveloperName>contract_inf_id</externalDeveloperName>
    <label>契約</label>
    <length>15</length>
    <type>Text</type>
</CustomField>