force-app/main/default/objects/SERVICE_CORE__x/fields/dmy_flag__c.field-meta.xml
<CustomField>
    <fullName>dmy_flag__c</fullName>
    <description>dmy_flag</description>
    <externalDeveloperName>dmy_flag</externalDeveloperName>
    <label>ダミーフラグ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>