force-app/main/default/objects/SERVICE_CORE__x/fields/ope_status__c.field-meta.xml
<CustomField>
    <fullName>ope_status__c</fullName>
    <description>ope_status</description>
    <externalDeveloperName>ope_status</externalDeveloperName>
    <label>運用ステータス</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>