force-app/main/default/objects/SERVICE_CORE__x/fields/service_core_id__c.field-meta.xml
<CustomField>
    <fullName>service_core_id__c</fullName>
    <description>service_core_id</description>
    <externalDeveloperName>service_core_id</externalDeveloperName>
    <label>サービスコアID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>