force-app/main/default/objects/SERVICE_CORE__x/fields/service_core_name__c.field-meta.xml
<CustomField>
    <fullName>service_core_name__c</fullName>
    <description>service_core_name</description>
    <externalDeveloperName>service_core_name</externalDeveloperName>
    <label>サービスコア名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>